--- a/works.html
+++ b/works.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="Description" content=""/>
 		<meta name="Keywords" content=""/>
-		<title>个人网站 | 那些花儿</title>
+		<title>个人网站 | 精彩纷呈</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 		<link rel="stylesheet" type="text/css" href="css/page.css"/>
 	</head>
@@ -30,7 +30,7 @@
 				</li>
 				<li class="nav-item">
 					<a href="works.html">
-						那些花儿
+						精彩纷呈
 						<span>SWEET MEMORY</span>
 					</a>
 				</li>
@@ -58,7 +58,7 @@
 		<div class="bread-nav">
 			<ul class="wrapper">
 				<li><a href="index.html">我的首页</a>&nbsp;&nbsp;>&nbsp;&nbsp;</li>
-				<li><a href="works.html">那些花儿</a></li>
+				<li><a href="works.html">精彩纷呈</a></li>
 			</ul>
 		</div>
 		
@@ -67,7 +67,7 @@
 			<div class="wrapper">
 				<div class="title">
 					<div class="common-title">
-						<h2>那些花儿</h2>
+						<h2>精彩纷呈</h2>
 						<span>SWEET MEMORY</span>
 					</div>
 	
@@ -129,7 +129,7 @@
 					<a href="index.html">我的首页</a>
 					<a href="introduce.html">个人简介</a>
 					<a href="achievement.html">来时的路</a>
-					<a href="works.html">那些花儿</a>
+					<a href="works.html">精彩纷呈</a>
 					<a href="news.html">一路有你</a>
 				</div>
 				<p class="copyright">版权所有：hxh个人网站 Copyright ©2020-2025    后台管理</p>
