--- a/achievement.html
+++ b/achievement.html
@@ -31,7 +31,7 @@
 				</li>
 				<li class="nav-item">
 					<a href="works.html">
-						那些花儿
+						精彩纷呈
 						<span>SWEET MEMORY</span>
 					</a>
 				</li>
@@ -162,7 +162,7 @@
 					<a href="index.html">我的首页</a>
 					<a href="introduce.html">个人简介</a>
 					<a href="achievement.html">来时的路</a>
-					<a href="works.html">那些花儿</a>
+					<a href="works.html">精彩纷呈</a>
 					<a href="news.html">一路有你</a>
 				</div>
 				<p class="copyright">版权所有：hxh个人网站 Copyright ©2020-2025     后台管理</p>
