--- a/introduce.html
+++ b/introduce.html
@@ -78,8 +78,60 @@
 					<p>愿千千万万遍。</p>
 				</div>
 			</div>
-		</div>
-		
+
+		<div class="intro">
+			<div class="wrapper clearfix">
+				<div class="intro-txt">
+					<h3 style="font-size: 24px;">以下是本人2020年课表：</h3>
+				</div>
+			</div>
+
+
+			<table  border="solid"  width="100%" height="100%" border="0" cellspacing="0" cellpadding="10" frame="solid" rules="solid" >
+			<thead>
+			<caption>课程表</caption>
+			<tr align="center" valign="center" >
+				<th>星期一</th>
+				<th>星期二</th>
+				<th>星期四</th>
+				<th>星期五</th>
+			</tr>
+			</thead>
+			<tbody align="center" valign="center">
+				<tr >
+				<td rowspan="2">互联网支付与结算</td>
+				<td></td>
+				<td></td>
+				<td>专业综合设计</td>
+
+			 	</tr>
+				<tr>
+
+				<td></td>
+				<td></td>
+				<td></td>
+				</tr>
+				<tr>
+				<td colspan="4">课间活动</td>
+			
+				</tr>
+			</tbody>
+			<tfoot align="center" valign="center">
+				<tr>
+				<td>信息安全</td>
+				<td ></td>
+				<td></td>
+				</tr>
+				<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				</tr>
+			</tfoot>
+			</table>
+
+			</div>
 		<div class="footer">
 			<div class="footer">
 			<div class="wrapper">
@@ -93,7 +145,7 @@
 				<p class="copyright">版权所有：hxh个人网站 Copyright ©2020-2025     后台管理</p>
 
 			</div>
-		</div>
+
 		</div>
 		
 	</body>
