--- a/news.html
+++ b/news.html
@@ -108,8 +108,35 @@
 
 			</div>
 		</div>
-		
-		
+
+<form action="#" method="get" class="messages">
+     <div class="messlist">
+      <label>姓名</label>
+      <input type="text" placeholder="姓名" />
+      <div class="clears"></div>
+     </div>
+     <div class="messlist">
+      <label>电子邮件</label>
+      <input type="text" placeholder="电子邮件" />
+      <div class="clears"></div>
+     </div>
+     <div class="messlist">
+      <label>手机号</label>
+      <input type="text" placeholder="手机号" />
+      <div class="clears"></div>
+     </div>
+     <div class="messlist textareas">
+      <label>留言内容</label>
+      <textarea placeholder="留言内容"></textarea>
+      <div class="clears"></div>
+     </div>
+
+     <div class="messsub">
+      <input type="submit" value="提交" style="background:#00a3eb;color:#fff;" />
+      <input type="reset" value="重填" />
+     </div>
+</form>	 
+
 		<div class="footer">
 			<div class="wrapper">
 				<div class="friend-link">
